@@ -111,6 +111,9 @@
     <Compile Include="Controls\BufferedTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\ImagePanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\ScriptEditorControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -517,7 +520,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="SlimDX, Version=2.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
-      <Private>True</Private>
+      <HintPath>..\..\packages\SlimDX.4.0.13.44\lib\NET20\SlimDX.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
